<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorAccent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/roundborder"
        android:orientation="vertical"
        android:textColor="@color/colorPrimary">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/welocome_to_my_journal"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- Logo Start-->
        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:background="@drawable/roundedittext"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/journal"
                android:gravity="center"
                android:src="@drawable/key" />


        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:text="@string/username_user_is_test"
            android:textColor="#4b405c" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="@color/colorAccent" />


        <!-- Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:text="@string/enter_pin_pin_is_test123"
            android:textColor="#4b405c" />

        <EditText
            android:id="@+id/pin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent" />
        <!-- Logo Ends -->
        <!-- Registration Form -->
        <!-- <android.support.v7.widget.CardView
                 android:id="@+id/card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 card_view:cardCornerRadius="4dp"
                 android:layout_gravity="center"
                 android:layout_margin="10dp">-->


        <!-- Password Label -->
        <!-- Link to Login Screen -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/noramal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/todo"
                            android:gravity="center"
                            android:src="@drawable/passkey" />


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp">


                    <TextView
                        android:id="@+id/normalsign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="@string/quick_login"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="1px"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:background="@color/white" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/noramal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/deposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/signinbutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/appname"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="5dp" />


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp">


                    <!--<TextView
                        android:id="@+id/sign_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:onClick="reset"
                        android:paddingEnd="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/login"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent"
                        android:textSize="13sp" />-->

                    <LinearLayout
                        android:layout_width="1px"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:background="@color/white" />


                    <TextView
                        android:id="@+id/sign_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:paddingLeft="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/sign_out"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>
</LinearLayout>


    <!-- Registration Form Ends -->
    <!--</android.support.v7.widget.CardView>-->
