<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_an_entry"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold|normal" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/imageView"
                    android:layout_gravity="center"

                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="To Do"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <EditText
                            android:id="@+id/input_task_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/colorPrimary">

                        </EditText>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="358dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="Task"
                                android:maxLines="1"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <EditText
                            android:id="@+id/input_task_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/colorPrimary">

                        </EditText>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/prority"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:paddingRight="10dp"
                                android:text=" Priority :"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/toDoRG"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/prority"
                            android:checkedButton="@+id/normal"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/high"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="High" />

                            <RadioButton
                                android:id="@+id/normal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Normal" />

                            <RadioButton
                                android:id="@+id/low"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Low" />

                        </RadioGroup>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingRight="10dp"
                                android:text="@string/status"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />

                            <CheckBox
                                android:id="@+id/checkbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/input_task_desc"
                                android:layout_centerInParent="true"
                                android:text="Completed?" />


                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="2dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        </LinearLayout>

                        <EditText
                            android:id="@+id/input_task_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:hint="@string/remember_me_in"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/colorPrimary">

                        </EditText>


                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/toDoTextTime"
                            android:layout_margin="8dp"
                            android:layout_toEndOf="@+id/toDoTextTime"
                            android:layout_toRightOf="@+id/toDoTextTime"
                            android:layout_weight="1"
                            android:entries="@array/time" />
                        <!--  <Spinner
                             android:id="@+id/spinner"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_gravity="left"
                             android:backgroundTint="@color/red_800"
                             android:textAppearance="?android:attr/textAppearanceSmall"

                             android:textColor="@color/secondary_text" />-->

                    </LinearLayout>


                </LinearLayout>

                <!-- Registration Form Ends -->
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="10dp"
                android:minHeight="200dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/btn_save"
                    android:background="@drawable/round"
                    android:text="@string/cancel"
                    android:textColor="@color/gen_white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_save"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/round"
                    android:text="@string/save"
                    android:textColor="@color/gen_white"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>